Make use of Content- and LabelProviders to populate the list
This allows us to operate an the options itself (displayed in the
ListViewer) instead of on String representations of the options
(displayed in the List that is at the core of the ListViewer).